Changes for CallLogCreation

--- a/src/App.css
+++ b/src/App.css
@@ -1220,114 +1220,75 @@ footer a {
     justify-content: center;
    }
 
-
-
-
-
-   /* .OtherExpenseMain .otherExpenseMainForm{
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     width: 100%;
-   } */
-    .OtherExpenseMain .otherExpenseMainForm .from, .to, .btns{
-     display: flex;
-     justify-content: center;
-     align-items: center;
-    padding-left: 10px;
-   }
-   .OtherExpenseMain .otherExpenseMainForm .executive-name{
+.popup {
+    position: absolute;
+    top: 27px;
+    left: 0;
+    right: 0;
+    /* bottom: 0; */
+    background-color: #d7d7d71c;
     display: flex;
     justify-content: center;
-    align-items: center;     
-  }
-  .OtherExpenseMain label{
-    margin: 0;
-    font-size: 13px;
-    font-weight: 600;
-  }
-  .OtherExpenseMain .otherExpenseMainForm label{
-    margin: 0;
-    font-size: 13px;
-    font-weight: 600;
-  }
-   .OtherExpenseMain .otherExpenseMainForm .col-sm-3, .col-sm-4{
-    margin-right: 13px!important;
-  }
-  .OtherExpenseMain .otherExpenseMainForm button{
-    width: 65px;
-  }
-  .OtherExpenseMain .otherExpenseMainForm button.subList{
-    width: 82px;
-  }
-   .OtherExpenseMain .otherExpenseMainForm button.go{
-    margin-right: 5px;
-  }
-  .OtherExpenseMain .otherExpenseMainForm hr{
-    margin: 5px 0 !important;
+    align-items: center;
+    z-index: 9999;
+    height: auto;
+    width: 100%;
+
   }
   
-
-  /* Doc Upload For CreateExpenseCreationSubList */
-.CreateExpenseCreationSubList label.font-weight-bold {
-    font-weight: 600 !important;
- }
-.CreateExpenseCreationSubList .upload_Documents .card {
-   box-shadow: 2px 2px 13px #312e2e23;
-   border-radius: 50px;
-   border: none;
-   margin-top: 15px;
-   /* width: 350px; */
-}
-.CreateExpenseCreationSubList .upload_Documents .card-body {
+  .popup__content {
+    position: relative;
+    width: 1100px;
+    max-width: 100%;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  .popup__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 21px;
-}
-.CreateExpenseCreationSubList .upload_Documents .UploadImg {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
+  }
+  
+  .popup__header h2 {
+    margin: 0;
+    font-size: 24px;
+  }
+  
+  .popup__close-btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    color: #333;
+  }
+  
+  .popup__body {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .popup__footer {
     display: flex;
-    justify-content: center;
-    align-items: center;       
-}
-.CreateExpenseCreationSubList .upload_Documents .UploadImg img{      
-    height: 70px;
-    width: 70px;
-    border-radius: 50px;
-    border: 4px solid #209fe4;
-    box-shadow: 1px 3px 14px #3838341f;
-}
-.CreateExpenseCreationSubList .upload_Documents .UploadingDetails{      
-    display: flex;
-    justify-content: center;      
-    flex-direction: column;
-    width: 100%;
- }
- .CreateExpenseCreationSubList .upload_Documents .UploadingDetails div{      
-    display: flex;    
- }
- .CreateExpenseCreationSubList .upload_Documents .UploadingDetails div span{      
-    margin-left: 10px;
- }
-.CreateExpenseCreationSubList .upload_Documents .UploadingDetails h6{      
-   font-size: 15px;
-   font-weight: 600;
-   width: 50px;
-}
-.CreateExpenseCreationSubList .upload_Documents .UploadingDetails span{      
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: .2px;
- }
- .CreateExpenseCreationSubList .upload_Documents .btns{      
-    display: flex;
-    justify-content: right;
- }
-
- .CreateExpenseCreationSubList button.doc-cancel{      
-    width: 120px !important;
-    padding: 10px 0;
-    border-radius: 8px;  
-    margin-top: 10px;
- }
- 
+    justify-content: flex-end;
+  }
+  
+  .popup__footer button {
+    background-color: #0074d9;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .popup__footer button:not(:last-child) {
+    margin-right: 10px;
+  }
+  
