--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,13 @@ body {
     color: #e74a3b ;
     cursor: pointer;
 }
+.print-icon {
+    color: #0da2d0;
+    padding: 0.375rem 0.75rem;
+    cursor: pointer !important;
+    transform: translate(-7px, 4px);
+    font-size: 18px;
+}
 
 @media screen and (max-width : 768px) {
     .btn-icon-split {
@@ -1597,12 +1604,12 @@ table.dataTable>thead>tr>th:not(.sorting_disabled), table.dataTable>thead>tr>td:
 .CallLogsDashboard .cards .card .row .newCall .icon svg{
    font-size: 17px !important;
 }
-.CallLogsDashboard .cards .card .row .pendingCall .count h4{
-    color: #38b000;
+.CallLogsDashboard .cards .card .row .pendingCall .count h4{    
+    color: #d00000;
 }
 .CallLogsDashboard .cards .card .row .pendingCall .icon{
-    background: #38b00018;
-    color: #38b000;
+    background: #d0000015;
+    color: #d00000;
 }
 .CallLogsDashboard .cards .card .row .updatedCall .count h4{
     color: #9d4edd;
@@ -1612,11 +1619,11 @@ table.dataTable>thead>tr>th:not(.sorting_disabled), table.dataTable>thead>tr>td:
     color: #9d4edd;
 }
 .CallLogsDashboard .cards .card .row .completedCall .count h4{
-    color: #d00000;
+    color: #38b000;
 }
-.CallLogsDashboard .cards .card .row .completedCall .icon{
-    background: #d0000015;
-    color: #d00000;
+.CallLogsDashboard .cards .card .row .completedCall .icon{    
+    background: #38b00018;
+    color: #38b000;
 }
 
 
