--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,15 @@ body {
 }
 .icon-delete, .icon-trash {
     color: #e74a3b ;
+    cursor: pointer;
+}
+
+.print-icon {
+    color: #0da2d0;
+    padding: 0.375rem 0.75rem;
+    cursor: pointer !important;
+    transform: translate(-7px, 4px);
+    font-size: 18px;
 }
 
 @media screen and (max-width : 768px) {
@@ -140,7 +149,7 @@ body {
     width: 180px;
     height: 180px;
     margin-top: 20px;
-    transition: 2s ease-in-out;
+    /* transition: 2s ease-in-out; */
     /* animation: wave; */
     animation-iteration-count: infinite;
     animation-duration: 2.5s;
@@ -462,19 +471,42 @@ body {
 }
 
 
-/* .abso {
-    position: relative;
-} */
+
 /*   Login Mobile Responsive    */
 
 @media screen and (max-width : 991px) {
     .Login .card {
         width: 340px;
         margin-left: 0;
+        margin-top: 0 !important;
     }
     .Login form button .dfx .fa-gavel {
         position: absolute;
         bottom: 63px;
+    }
+    .Login .alignment {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 0 !important;
+    } 
+    .Login .new-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 105px;
+        height: 105px;
+        border-radius: 250px;
+        position: relative;
+        /* z-index: 999; */
+        top: -7px;
+        background: #fff;
+        box-shadow: 1px 1px 15px #aa9e9e69;
+    }
+    .Login .login_logo {
+        width: 70px;
+        height: 70px;   
+        margin: 0;     
     }    
 }
 
@@ -1574,11 +1606,11 @@ table.dataTable>thead>tr>th:not(.sorting_disabled), table.dataTable>thead>tr>td:
    font-size: 17px !important;
 }
 .CallLogsDashboard .cards .card .row .pendingCall .count h4{
-    color: #38b000;
+    color: #d00000;
 }
 .CallLogsDashboard .cards .card .row .pendingCall .icon{
-    background: #38b00018;
-    color: #38b000;
+    background: #d0000015;
+    color: #d00000;
 }
 .CallLogsDashboard .cards .card .row .updatedCall .count h4{
     color: #9d4edd;
@@ -1588,11 +1620,11 @@ table.dataTable>thead>tr>th:not(.sorting_disabled), table.dataTable>thead>tr>td:
     color: #9d4edd;
 }
 .CallLogsDashboard .cards .card .row .completedCall .count h4{
-    color: #d00000;
+    color: #38b000;
 }
 .CallLogsDashboard .cards .card .row .completedCall .icon{
-    background: #d0000015;
-    color: #d00000;
+    background: #38b00018;
+    color: #38b000;
 }
 
 
